fluxcd/infrastructure/configs/overlays/production/istio-policies/hyrule-castle/allow-erpnext-to-erpnext-mariadb.yaml
apiVersion: security.istio.io/v1
kind: AuthorizationPolicy
metadata:
  name: allow-erpnext-to-erpnext-mariadb
spec:
  selector:
    matchLabels:
      app: erpnext-mariadb
  action: ALLOW
  rules:
    - from:
        - source:
            principals:
              - cluster.local/ns/hyrule-castle/sa/erpnext-sites
              - cluster.local/ns/hyrule-castle/sa/erpnext-queue-long
              - cluster.local/ns/hyrule-castle/sa/erpnext-queue-short
              - cluster.local/ns/hyrule-castle/sa/erpnext-scheduler
      to:
        - operation:
            ports: ["3306"]
